# brain-corp

./: CMakeLists.txt  README.md
doc/: tutorial.cpp
include/: CMakeLists.txt  Speedy.h
include/Core/: AddExpression.h  Expression.h  Matrix.h  MultiplyExpression.h  Printer.h  TransposeExpression.h  Version.h
test/: CMakeLists.txt  main.cpp  matrix.cpp
